--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ series_note: Home University Library of Modern Knowledge, No. 103
 subjects:
 - !lcc 'JA'
 - !lcsh 'Political science -- Great Britain -- History'
+- GITenberg
 title: Political Thought in England from Locke to Bentham
 url: http://www.gutenberg.org/ebooks/14735
